# Pomodomate-cli

./: .gitignore  Cargo.toml  LICENSE  PRIVACY.md  Pomodomate-celi.md  README.md
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
docs/: PRD.md  daemon.md  hooks.md  idle.md  sounds.md  tags.md  themes.md  waybar.md
docs/superpowers/specs/: 2026-07-06-usability-design.md
packaging/aur/: .SRCINFO  PKGBUILD  README.md
src/: app.rs  config.rs  daemon.rs  engine.rs  hooks.rs  idle.rs  main.rs  sound.rs  storage.rs  theme.rs  timer.rs
src/ui/: digits.rs  heatmap.rs  mascot.rs  mod.rs
